# network-transport-ivc

./: .gitignore  LICENSE  Makefile  Peer1.hs  Peer2.hs  network-transport-ivc.cabal
Network/Transport/: Dummy.hs  IVC.hs
Network/Transport/IVC/: Internal.hs
benchmarks/: standard.mk
benchmarks/Channels/: Main.hs  Makefile  Node1.config
benchmarks/Latency/: Main.hs
benchmarks/Spawns/: Main.hs  Node2.config
benchmarks/Throughput/: Main.hs  Makefile
src/Network/Transport/: IVC.hs
src/Network/Transport/IVC/: Util.hs
test/Double/: Makefile  Peer1.hs  Peer2.hs
test/Process/: Makefile  Node.hs
test/Single/: Makefile  Peer  Peer.hs
tests/Double/: Peer1.hs  Peer2.config  Peer2.hs
tests/KMeans/: Main.hs  Node1.config  Node3.config
tests/Parallel/: Main.hs  Makefile  Node2.config  Node3.config
tests/Process/: Node.config  Node.hs
tests/Reconnect/: Peer.hs
tests/Single/: Peer.config  Peer.hs
