name:                network-transport-ivc
version:             0.1.0.0
synopsis:            Implementation of Network.Transport using IVC of HalVM.
license:             MIT
license-file:        LICENSE
author:              Siran Yang
maintainer:          ysr@mail.ustc.edu.cn
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Transport.IVC,
                       Network.Transport.IVC.Internal
  build-depends:       HALVMCore >= 2.0.0 && < 3.0.0,
                       network-transport >=0.4 && <0.5,
                       base -any, containers >=0.5 && <0.6, bytestring -any,
                       split -any
                        
  hs-source-dirs:      src
  default-language:    Haskell2010
